Put the "house wins dice roll" message back in for autoplay Moved "clear the board" and "start over" function back up toward the top of script file changed z-index of game messages to make sure they show up on top

--- a/css/styles.css
+++ b/css/styles.css
@@ -70,6 +70,7 @@ button {
     height: 2em;
     width: 80%;
     font-size: 4em;
+    z-index: 2;
 }
 
 #error{
@@ -83,6 +84,7 @@ button {
     height: 2em;
     width: 80%;
     font-size: 4em;
+    z-index: 2;
 }
 
 #autoDraw{
@@ -96,4 +98,5 @@ button {
     height: 2em;
     width: 80%;
     font-size: 4em;
+    z-index: 2;
 }
